Add file structure

--- a/jupyter_notebooks/01_Data_Collection.ipynb
+++ b/jupyter_notebooks/01_Data_Collection.ipynb
@@ -19,19 +19,25 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* \n",
+        "* Fetch data from Kaggle and save as raw data.\n",
+        "* Load and inspect the data and save under outputs/datasets/collection\n",
+        "* Link the files to the github repository.\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* \n",
+        "* Kaggle JSON - authentication token\n",
+        "* Downloaded the recommended house price dataset from [Kaggle](https://www.kaggle.com/datasets/codeinstitute/housing-prices-data)\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* \n",
+        "* The Kaggle files were unzipped to reveal the following files for input:\n",
+        "* inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/house_prices_records.csv\n",
+        "* inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/inherited_houses.csv\n",
+        "* Generate Dataset: input/datasets/house-price/house_prices_records and input/datasets/house-price/inherited_houses\n",
         "\n",
         "## Additional Comments\n",
         "\n",
-        "*  \n"
+        "* No comments. \n"
       ]
     },
     {
@@ -50,13 +56,6 @@
       },
       "source": [
         "# Change working directory"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* We are assuming you will store the notebooks in a subfolder, therefore when running the notebook in the editor, you will need to change the working directory"
       ]
     },
     {
