--- a/jupyter_notebooks/02_Sales_Price_Study.ipynb
+++ b/jupyter_notebooks/02_Sales_Price_Study.ipynb
@@ -7,7 +7,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **Data Collection**"
+        "# **Sales Price Study**"
       ]
     },
     {
@@ -19,19 +19,34 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* \n",
+        "* Case Background Information\n",
+        "   \n",
+        "    * The client is interested in predicting the prices of homes in Ames, Iowa.\n",
+        "    * Therefore, the client expects data visualizations of the correlated variables against the sale price.\n",
+        "    * The dataset consists of previous sales with specific features and the price for each house.\n",
+        "    * Our target variable is sales price based on specific features.\n",
+        "\n",
+        "## Tasks \n",
+        "\n",
+        "* Answer business requirement 1\n",
+        "    * Perform a correlation and/or PPS study to investigate the most relevant features correlating to the sale price.\n",
+        "    * Undertake Exploratory Data Analysis to better understand the dataset.\n",
+        "    * Follow up with a correlation study.\n",
+        "    * Extrapolate and use high ranked correlated features.\n",
+        "    * Conclusions and next steps.\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* \n",
+        "* inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/house_prices_records.csv\n",
         "\n",
-        "## Outputs\n",
+        "## Ouputs\n",
         "\n",
-        "* \n",
+        "* Develop insight towards answering the clients business requirement.\n",
+        "\n",
         "\n",
         "## Additional Comments\n",
         "\n",
-        "*  \n"
+        "*  No comments.\n"
       ]
     },
     {
@@ -50,13 +65,6 @@
       },
       "source": [
         "# Change working directory"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* We are assuming you will store the notebooks in a subfolder, therefore when running the notebook in the editor, you will need to change the working directory"
       ]
     },
     {
