--- a/jupyter_notebooks/04_Feature_Engineering.ipynb
+++ b/jupyter_notebooks/04_Feature_Engineering.ipynb
@@ -7,7 +7,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **Data Collection**"
+        "# **Feature Engineering**"
       ]
     },
     {
@@ -19,19 +19,28 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* \n",
+        "* Undertake feature engineering for regression features\n",
+        "\n",
+        "## Tasks\n",
+        "\n",
+        "* Load and inspect the data prepared during data cleaning\n",
+        "* Data exploration and analysis\n",
+        "* Feature engineering\n",
+        "* Conclusion and steps forward\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* \n",
+        "* outputs/datasets/cleaned/train_set.csv\n",
+        "* outputs/datasets/cleaned/test_set.csv\n",
+        "\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* \n",
+        "* A list of variables that will be engineered\n",
         "\n",
         "## Additional Comments\n",
         "\n",
-        "*  \n"
+        "*  No comments.\n"
       ]
     },
     {
@@ -50,13 +59,6 @@
       },
       "source": [
         "# Change working directory"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* We are assuming you will store the notebooks in a subfolder, therefore when running the notebook in the editor, you will need to change the working directory"
       ]
     },
     {
