--- a/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
+++ b/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
@@ -7,7 +7,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **Data Collection**"
+        "# **Sales Price Prediction**"
       ]
     },
     {
@@ -19,19 +19,18 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* \n",
+        "* Train a ML pipeline using tuning with the best features to predict a property's sale price.\n",
         "\n",
-        "## Inputs\n",
+        "## Tasks\n",
         "\n",
-        "* \n",
-        "\n",
-        "## Outputs\n",
-        "\n",
-        "* \n",
+        "* Loading Data from cleaned data outputs\n",
+        "* Creating the ML Regressor Pipelines\n",
+        "* Split Train and Test sets\n",
+        "* Grid Search CV - Sklearn\n",
         "\n",
         "## Additional Comments\n",
         "\n",
-        "*  \n"
+        "*  No comments.\n"
       ]
     },
     {
@@ -50,13 +49,6 @@
       },
       "source": [
         "# Change working directory"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* We are assuming you will store the notebooks in a subfolder, therefore when running the notebook in the editor, you will need to change the working directory"
       ]
     },
     {
