--- a/jupyter_notebooks/03_Data_Cleaning.ipynb
+++ b/jupyter_notebooks/03_Data_Cleaning.ipynb
@@ -7,7 +7,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **Data Collection**"
+        "# **Data Cleaning**"
       ]
     },
     {
@@ -19,19 +19,32 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* \n",
+        "* Prepare the data sets for further analysis, evaluate any missing data.\n",
+        "* Load and inspect the data collated during the data collection process.\n",
+        "* Correlation and PPS study.\n",
+        "* Create data cleaning pipeline and prepare data for output to model.\n",
+        "* Conclusion and next steps.\n",
+        "\n",
+        "## Tasks\n",
+        "* Create data input pipelines.\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* \n",
+        "* The following files will be the intended datasets to be used:\n",
+        "* inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/house_prices_records.csv\n",
+        "* inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/inherited_houses.csv\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* \n",
+        "* Following the data exploration and cleaning, the following outputs are expected:\n",
+        "* outputs/datasets/cleaned/clean_house_price_records.csv\n",
+        "* outputs/datasets/cleaned/clean_inherited_houses.csv\n",
+        "* outputs/datasets/cleaned/train_set.csv\n",
+        "* outputs/datasets/cleaned/test_set.csv\n",
         "\n",
         "## Additional Comments\n",
         "\n",
-        "*  \n"
+        "* No comments.\n"
       ]
     },
     {
@@ -50,13 +63,6 @@
       },
       "source": [
         "# Change working directory"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* We are assuming you will store the notebooks in a subfolder, therefore when running the notebook in the editor, you will need to change the working directory"
       ]
     },
     {
