--- a/jupyter_notebooks/01_Data_Collection.ipynb
+++ b/jupyter_notebooks/01_Data_Collection.ipynb
@@ -70,12 +70,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "wZfF_j-Bz3i4",
         "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'/workspace/Heritage-Housing-Issues-PP5/jupyter_notebooks'"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "current_dir = os.getcwd()\n",
@@ -95,12 +106,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "TwHsQRWjz3i9",
         "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You set a new current directory\n"
+          ]
+        }
+      ],
       "source": [
         "os.chdir(os.path.dirname(current_dir))\n",
         "print(\"You set a new current directory\")"
@@ -117,12 +136,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "vz3S-_kjz3jA",
         "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'/workspace/Heritage-Housing-Issues-PP5'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "current_dir = os.getcwd()\n",
         "current_dir"
@@ -146,10 +176,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting kaggle==1.5.13\n",
+            "  Downloading kaggle-1.5.13.tar.gz (63 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m63.3/63.3 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+            "\u001b[?25hRequirement already satisfied: six>=1.10 in /home/gitpod/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from kaggle==1.5.13) (1.16.0)\n",
+            "Requirement already satisfied: certifi in /home/gitpod/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from kaggle==1.5.13) (2022.12.7)\n",
+            "Requirement already satisfied: python-dateutil in /home/gitpod/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from kaggle==1.5.13) (2.8.2)\n",
+            "Requirement already satisfied: requests in /home/gitpod/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from kaggle==1.5.13) (2.28.2)\n",
+            "Collecting tqdm (from kaggle==1.5.13)\n",
+            "  Downloading tqdm-4.65.0-py3-none-any.whl (77 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.1/77.1 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting python-slugify (from kaggle==1.5.13)\n",
+            "  Downloading python_slugify-8.0.1-py2.py3-none-any.whl (9.7 kB)\n",
+            "Requirement already satisfied: urllib3 in /home/gitpod/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from kaggle==1.5.13) (1.26.15)\n",
+            "Collecting text-unidecode>=1.3 (from python-slugify->kaggle==1.5.13)\n",
+            "  Downloading text_unidecode-1.3-py2.py3-none-any.whl (78 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.2/78.2 kB\u001b[0m \u001b[31m10.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: charset-normalizer<4,>=2 in /home/gitpod/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from requests->kaggle==1.5.13) (3.1.0)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /home/gitpod/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from requests->kaggle==1.5.13) (3.4)\n",
+            "Building wheels for collected packages: kaggle\n",
+            "  Building wheel for kaggle (setup.py) ... \u001b[?25ldone\n",
+            "\u001b[?25h  Created wheel for kaggle: filename=kaggle-1.5.13-py3-none-any.whl size=77717 sha256=4cfc0efedf805ef99a5955f74326c216dc3ce489c3fe075070aed722eb5113ff\n",
+            "  Stored in directory: /workspace/.pyenv_mirror/pip_cache/wheels/3a/a1/b2/6ae87ab801289eabd078a52cc8167e232e98f09b0e6cd2ca48\n",
+            "Successfully built kaggle\n",
+            "Installing collected packages: text-unidecode, tqdm, python-slugify, kaggle\n",
+            "Successfully installed kaggle-1.5.13 python-slugify-8.0.1 text-unidecode-1.3 tqdm-4.65.0\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
+      "source": [
+        "pip install kaggle==1.5.13"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -178,10 +244,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "os.environ['KAGGLE_CONFIG_DIR'] = os.getcwd()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "KaggleDatasetPath = \"datasets/codeinstitute/housing-prices-data\"\n",
+        "DestinationFolder = \"Inputs/datasets/raw\""
+      ]
     },
     {
       "cell_type": "markdown",
@@ -270,7 +349,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12"
+      "version": "3.11.1"
     },
     "orig_nbformat": 2
   },
