Add files to src folders for manage files and predictive anylytics

--- a/jupyter_notebooks/01_Data_Collection.ipynb
+++ b/jupyter_notebooks/01_Data_Collection.ipynb
@@ -7,7 +7,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **Data Collection**"
+        "# **Notebook 1: Data Collection**"
       ]
     },
     {
@@ -22,12 +22,15 @@
         "## Objectives\n",
         "\n",
         "* Fetch data from Kaggle and save as raw data.\n",
+        "\n",
         "* Load and inspect the data and save under outputs/datasets/collection\n",
+        "\n",
         "* Push files to github repository.\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Kaggle JSON - authentication token\n",
+        "* Kaggle JSON - authentication token.\n",
+        "\n",
         "* Downloaded the recommended house price dataset from [Kaggle](https://www.kaggle.com/datasets/codeinstitute/housing-prices-data)\n",
         "\n",
         "## Outputs\n",
@@ -40,6 +43,7 @@
         "## Additional Comments\n",
         "\n",
         "* The Data understanding within Crisp-DM methodology is shown in this notebook.\n",
+        "\n",
         "* Walkthrough Project 2 has formed the guidelines for this notebook in terms of undertaking data collection."
       ]
     },
