--- a/jupyter_notebooks/03_Data_Cleaning.ipynb
+++ b/jupyter_notebooks/03_Data_Cleaning.ipynb
@@ -7,7 +7,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **Data Cleaning**"
+        "# **Notebook 3: Data Cleaning**"
       ]
     },
     {
