--- a/jupyter_notebooks/04_Feature_Engineering.ipynb
+++ b/jupyter_notebooks/04_Feature_Engineering.ipynb
@@ -7,7 +7,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **Feature Engineering**"
+        "# **Notebook 4: Feature Engineering**"
       ]
     },
     {
