Add findings following analysis

--- a/jupyter_notebooks/01_Data_Collection.ipynb
+++ b/jupyter_notebooks/01_Data_Collection.ipynb
@@ -922,7 +922,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Conclusions and Next Steps\n",
+        "# Conclusions and Steps to Follow\n",
         "\n",
         "* There is a difference between the house price and inherited house datasets.\n",
         "\n",
