--- a/jupyter_notebooks/02_Sales_Price_Study.ipynb
+++ b/jupyter_notebooks/02_Sales_Price_Study.ipynb
@@ -810,31 +810,31 @@
         "id": "ltNetd085qHf"
       },
       "source": [
-        "# Push files to Repo"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* If you do not need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aKlnIozA4eQO",
-        "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
-      },
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "try:\n",
-        "  # create here your folder\n",
-        "  # os.makedirs(name='')\n",
-        "except Exception as e:\n",
-        "  print(e)\n"
+        "# Conclusions and Steps to Follow\n",
+        "\n",
+        "The correlations and plots interpretation converge.\n",
+        "\n",
+        "The following are the variables isolated in the correlation study:\n",
+        "\n",
+        "* 1stFlrSF: First Floor square feet\n",
+        "\n",
+        "* GarageArea: Size of garage in square feet\n",
+        "\n",
+        "* GrLivArea: Above grade (ground) living area square feet\n",
+        "\n",
+        "* OverallQual: Rates the overall material and finish of the house\n",
+        "\n",
+        "* YearBuilt: Original construction date\n",
+        "\n",
+        "* TotalBsmtSF: Total square feet of basement area\n",
+        "\n",
+        "*The above correlation analysis suggests that the size of the ground floor living area,basement and garage area, greatly influences the determination of the house price. Beyond this the year the house was built and the overall quality of materials used and the finishes in the house also influence the house price.\n",
+        "\n",
+        "*The plots show that the variables, isolated in the correlation study, present a strong correlation and may have a strong predictive power for towards Sale Price.\n",
+        "\n",
+        "*Having considered the above, we fail to reject the hypotheses set in the beginning.\n",
+        "\n",
+        "We can now proceed to Data Cleaning as shown in the Walkthrough Project 2."
       ]
     }
   ],
