Check analysis and transformation functions build, adjust features and approach

--- a/jupyter_notebooks/04_Feature_Engineering.ipynb
+++ b/jupyter_notebooks/04_Feature_Engineering.ipynb
@@ -40,7 +40,9 @@
         "\n",
         "## Additional Comments\n",
         "\n",
-        "*  No comments.\n"
+        "* This notebook was informed and guided by the steps provided in the Customer Churn Walkthrough Porject.\n",
+        "\n",
+        "* We intend to explore the data using the CRISP-DM Data methodology.\n"
       ]
     },
     {
@@ -73,12 +75,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "wZfF_j-Bz3i4",
         "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'/workspace/Heritage-Housing-Issues-PP5/jupyter_notebooks'"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "current_dir = os.getcwd()\n",
@@ -98,12 +111,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "TwHsQRWjz3i9",
         "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You set a new current directory\n"
+          ]
+        }
+      ],
       "source": [
         "os.chdir(os.path.dirname(current_dir))\n",
         "print(\"You set a new current directory\")"
@@ -120,12 +141,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "vz3S-_kjz3jA",
         "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'/workspace/Heritage-Housing-Issues-PP5'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "current_dir = os.getcwd()\n",
         "current_dir"
@@ -137,14 +169,14 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Section 1"
+        "## Load Data"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 1 content"
+        "Load the train dataset"
       ]
     },
     {
@@ -152,7 +184,29 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "train_set_path = \"outputs/datasets/cleaned/train_set.csv\"\n",
+        "train_set = pd.read_csv(train_set_path)\n",
+        "train_set.head(3)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Load the test dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "test_set_path = \"outputs/datasets/cleaned/test_set.csv\"\n",
+        "test_set = pd.read_csv(test_set_path)\n",
+        "test_set.head(3)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -169,14 +223,14 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "# Section 2"
+        "## Data Exploration"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 2 content"
+        "* Initiate pandas profiling report to evaluate possible transformations within the datasets"
       ]
     },
     {
@@ -184,7 +238,11 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "from ydata_profiling import ProfileReport\n",
+        "pandas_report = ProfileReport(df=train_set, minimal=True)\n",
+        "pandas_report.to_notebook_iframe()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -197,15 +255,243 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "NOTE"
+        "## Feature Engineering"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* You may add as many sections as you want, as long as they support your project workflow.\n",
-        "* All notebook's cells should be run top-down (you can't create a dynamic wherein a given point you need to go back to a previous cell to execute some task, like go back to a previous cell and refresh a variable content)"
+        "### Analysis and Transformation Functions"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Below I intend to use a unique function adapated from the feature-engineering lesson, to initiate feature engineering."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from feature_engine import transformation as vt\n",
+        "from feature_engine.outliers import Winsorizer\n",
+        "from feature_engine.encoding import OrdinalEncoder\n",
+        "import scipy.stats as stats\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "sns.set(style=\"whitegrid\")\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "%matplotlib inline\n",
+        "\n",
+        "def FeatureEngineeringAnalysis(df,analysis_type=None):\n",
+        "  \"\"\"\n",
+        "  - A fast way for feature engineering numerical and categorical variables\n",
+        "  so as to decide which transformation can better transform the distribution shape \n",
+        "  - Upon transformation, use a reporting tool, like ydata-profiling, to evaluate the distributions.\n",
+        "\n",
+        "  \"\"\"\n",
+        "  check_missing_values(df)\n",
+        "  allowed_types= ['numerical', 'ordinal_encoder',  'outlier_winsorizer']\n",
+        "  check_user_entry_on_analysis_type(analysis_type, allowed_types)\n",
+        "  list_column_transformers = define_list_column_transformers(analysis_type)\n",
+        "  \n",
+        "  \n",
+        "  # Looping in of each variable and engineer the data according to the analysis type\n",
+        "  df_feat_eng = pd.DataFrame([])\n",
+        "  for column in df.columns:\n",
+        "    # create additional columns (column_method) to apply the methods\n",
+        "    df_feat_eng = pd.concat([df_feat_eng, df[column]], axis=1)\n",
+        "    for method in list_column_transformers:\n",
+        "      df_feat_eng[f\"{column}_{method}\"] = df[column]\n",
+        "      \n",
+        "    # Apply transformers in respectives column_transformers\n",
+        "    df_feat_eng,list_applied_transformers = apply_transformers(analysis_type, df_feat_eng, column)\n",
+        "\n",
+        "    # For each variable, assess how the transformations have performed\n",
+        "    transformer_evaluation(column, list_applied_transformers, analysis_type, df_feat_eng)\n",
+        "\n",
+        "  return df_feat_eng\n",
+        "\n",
+        "\n",
+        "def check_user_entry_on_analysis_type(analysis_type, allowed_types):\n",
+        "  ### Check analyis type\n",
+        "  if analysis_type == None:\n",
+        "    raise SystemExit(f\"Its necessary to pass analysis_type parameter as one of the following options: {allowed_types}\")\n",
+        "  if analysis_type not in allowed_types:\n",
+        "      raise SystemExit(f\"analysis_type argument should be shown as one of these options: {allowed_types}\")\n",
+        "\n",
+        "\n",
+        "def check_missing_values(df):\n",
+        "  if df.isna().sum().sum() != 0:\n",
+        "    raise SystemExit(\n",
+        "        f\"There is a missing value in your dataset. Please correct that before getting into feature engineering.\")\n",
+        "\n",
+        "\n",
+        "def define_list_column_transformers(analysis_type):\n",
+        "  ### The suffix colummns to be set acording to analysis_type\n",
+        "  if analysis_type=='numerical':\n",
+        "    list_column_transformers = [\"log_e\", \"log_10\", \"reciprocal\", \"power\", \"box_cox\", \"yeo_johnson\"]\n",
+        "  \n",
+        "  elif analysis_type=='ordinal_encoder':\n",
+        "    list_column_transformers = [\"ordinal_encoder\"]\n",
+        "\n",
+        "  elif analysis_type=='outlier_winsorizer':\n",
+        "    list_column_transformers = ['iqr']\n",
+        "\n",
+        "  return list_column_transformers\n",
+        "\n",
+        "def apply_transformers(analysis_type, df_feat_eng, column):\n",
+        "\n",
+        "\n",
+        "  for col in df_feat_eng.select_dtypes(include='category').columns:\n",
+        "    df_feat_eng[col] = df_feat_eng[col].astype('object')\n",
+        "\n",
+        "\n",
+        "  if analysis_type=='numerical':\n",
+        "    df_feat_eng,list_applied_transformers = FeatEngineering_Numerical(df_feat_eng,column)\n",
+        "  \n",
+        "  elif analysis_type=='outlier_winsorizer':\n",
+        "    df_feat_eng,list_applied_transformers = FeatEngineering_OutlierWinsorizer(df_feat_eng,column)\n",
+        "\n",
+        "  elif analysis_type=='ordinal_encoder':\n",
+        "    df_feat_eng,list_applied_transformers = FeatEngineering_CategoricalEncoder(df_feat_eng,column)\n",
+        "\n",
+        "  return df_feat_eng,list_applied_transformers\n",
+        "\n",
+        "def transformer_evaluation(column, list_applied_transformers, analysis_type, df_feat_eng):\n",
+        "  # For each variable, assess how the transformations are performing\n",
+        "  print(f\"* Variable Analyzed: {column}\")\n",
+        "  print(f\"* Applied transformation: {list_applied_transformers} \\n\")\n",
+        "  transformer_column = column + '_' + analysis_type\n",
+        "  \n",
+        "  for col in [column] + list_applied_transformers:\n",
+        "    \n",
+        "    if analysis_type!='ordinal_encoder':\n",
+        "      DiagnosticPlots_Numerical(df_feat_eng, col)\n",
+        "    \n",
+        "    else:\n",
+        "      print(f\"{df_feat_eng.set_index(transformer_column).groupby([transformer_column, column]).size()} \\n\")\n",
+        "      if col == column: \n",
+        "        DiagnosticPlots_Categories(df_feat_eng, col)\n",
+        "      else:\n",
+        "        DiagnosticPlots_Numerical(df_feat_eng, col)\n",
+        "\n",
+        "    print(\"\\n\")\n",
+        "\n",
+        "\n",
+        "def DiagnosticPlots_Categories(df_feat_eng, col):\n",
+        "  plt.figure(figsize=(4, 3))\n",
+        "  sns.countplot(data=df_feat_eng, x=col,palette=['#432371'],order = df_feat_eng[col].value_counts().index)\n",
+        "  plt.xticks(rotation=90) \n",
+        "  plt.suptitle(f\"{col}\", fontsize=30,y=1.05)        \n",
+        "  plt.show()\n",
+        "  print(\"\\n\")\n",
+        "\n",
+        "\n",
+        "def DiagnosticPlots_Numerical(df, variable):\n",
+        "  fig, axes = plt.subplots(1, 3, figsize=(12, 4))\n",
+        "  sns.histplot(data=df, x=variable, kde=True,element=\"step\",ax=axes[0]) \n",
+        "  stats.probplot(df[variable], dist=\"norm\", plot=axes[1])\n",
+        "  sns.boxplot(x=df[variable],ax=axes[2])\n",
+        "  \n",
+        "  axes[0].set_title('Histogram')\n",
+        "  axes[1].set_title('QQ Plot')\n",
+        "  axes[2].set_title('Boxplot')\n",
+        "  fig.suptitle(f\"{variable}\", fontsize=30,y=1.05)\n",
+        "  plt.tight_layout()\n",
+        "  plt.show()\n",
+        "\n",
+        "\n",
+        "def FeatEngineering_CategoricalEncoder(df_feat_eng,column):\n",
+        "  list_methods_worked = []\n",
+        "  try:  \n",
+        "    encoder= OrdinalEncoder(encoding_method='arbitrary', variables = [f\"{column}_ordinal_encoder\"])\n",
+        "    df_feat_eng = encoder.fit_transform(df_feat_eng)\n",
+        "    list_methods_worked.append(f\"{column}_ordinal_encoder\")\n",
+        "  \n",
+        "  except: \n",
+        "    df_feat_eng.drop([f\"{column}_ordinal_encoder\"],axis=1,inplace=True)\n",
+        "    \n",
+        "  return df_feat_eng,list_methods_worked\n",
+        "\n",
+        "\n",
+        "def FeatEngineering_OutlierWinsorizer(df_feat_eng,column):\n",
+        "  list_methods_worked = []\n",
+        "\n",
+        "  ### Winsorizer iqr\n",
+        "  try: \n",
+        "    disc=Winsorizer(\n",
+        "        capping_method='iqr', tail='both', fold=1.5, variables = [f\"{column}_iqr\"])\n",
+        "    df_feat_eng = disc.fit_transform(df_feat_eng)\n",
+        "    list_methods_worked.append(f\"{column}_iqr\")\n",
+        "  except: \n",
+        "    df_feat_eng.drop([f\"{column}_iqr\"],axis=1,inplace=True)\n",
+        "\n",
+        "\n",
+        "  return df_feat_eng,list_methods_worked\n",
+        "\n",
+        "\n",
+        "def FeatEngineering_Numerical(df_feat_eng,column):\n",
+        "\n",
+        "  list_methods_worked = []\n",
+        "\n",
+        "  ### LogTransformer base e\n",
+        "  try: \n",
+        "    lt = vt.LogTransformer(variables = [f\"{column}_log_e\"])\n",
+        "    df_feat_eng = lt.fit_transform(df_feat_eng)\n",
+        "    list_methods_worked.append(f\"{column}_log_e\")\n",
+        "  except: \n",
+        "    df_feat_eng.drop([f\"{column}_log_e\"],axis=1,inplace=True)\n",
+        "\n",
+        "  ### LogTransformer base 10\n",
+        "  try: \n",
+        "    lt = vt.LogTransformer(variables = [f\"{column}_log_10\"],base='10')\n",
+        "    df_feat_eng = lt.fit_transform(df_feat_eng)\n",
+        "    list_methods_worked.append(f\"{column}_log_10\")\n",
+        "  except: \n",
+        "    df_feat_eng.drop([f\"{column}_log_10\"],axis=1,inplace=True)\n",
+        "\n",
+        "  ### ReciprocalTransformer\n",
+        "  try:\n",
+        "    rt = vt.ReciprocalTransformer(variables = [f\"{column}_reciprocal\"])\n",
+        "    df_feat_eng =  rt.fit_transform(df_feat_eng)\n",
+        "    list_methods_worked.append(f\"{column}_reciprocal\")\n",
+        "  except:\n",
+        "    df_feat_eng.drop([f\"{column}_reciprocal\"],axis=1,inplace=True)\n",
+        "\n",
+        "\n",
+        "    ### PowerTransformer\n",
+        "  try:\n",
+        "    pt = vt.PowerTransformer(variables = [f\"{column}_power\"])\n",
+        "    df_feat_eng = pt.fit_transform(df_feat_eng)\n",
+        "    list_methods_worked.append(f\"{column}_power\")\n",
+        "  except:\n",
+        "    df_feat_eng.drop([f\"{column}_power\"],axis=1,inplace=True)\n",
+        "\n",
+        "  ### BoxCoxTransformer\n",
+        "  try:\n",
+        "    bct = vt.BoxCoxTransformer(variables = [f\"{column}_box_cox\"])\n",
+        "    df_feat_eng = bct.fit_transform(df_feat_eng)\n",
+        "    list_methods_worked.append(f\"{column}_box_cox\")\n",
+        "  except:\n",
+        "    df_feat_eng.drop([f\"{column}_box_cox\"],axis=1,inplace=True)\n",
+        "\n",
+        "  ### YeoJohnsonTransformer\n",
+        "  try:\n",
+        "    yjt = vt.YeoJohnsonTransformer(variables = [f\"{column}_yeo_johnson\"])\n",
+        "    df_feat_eng = yjt.fit_transform(df_feat_eng)\n",
+        "    list_methods_worked.append(f\"{column}_yeo_johnson\")\n",
+        "  except:\n",
+        "        df_feat_eng.drop([f\"{column}_yeo_johnson\"],axis=1,inplace=True)\n",
+        "\n",
+        "  return df_feat_eng,list_methods_worked"
       ]
     },
     {
@@ -221,7 +507,7 @@
         "id": "ltNetd085qHf"
       },
       "source": [
-        "# Push files to Repo"
+        "## Conclusion and Steps to Follow"
       ]
     },
     {
@@ -229,23 +515,6 @@
       "metadata": {},
       "source": [
         "* If you do not need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aKlnIozA4eQO",
-        "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
-      },
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "try:\n",
-        "  # create here your folder\n",
-        "  # os.makedirs(name='')\n",
-        "except Exception as e:\n",
-        "  print(e)\n"
       ]
     }
   ],
@@ -273,7 +542,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12"
+      "version": "3.11.1"
     },
     "orig_nbformat": 2
   },
