Review and make changes to data transpormers

--- a/jupyter_notebooks/04_Feature_Engineering.ipynb
+++ b/jupyter_notebooks/04_Feature_Engineering.ipynb
@@ -503,6 +503,256 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### The Transformers to be used\n",
+        "* These are the transformer that will be used and will be applied according to this order:\n",
+        "\n",
+        "  * Categorical Encoding\n",
+        "  * Numerical Transformation\n",
+        "  * Smart Correlation Selection"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Categorical Encoding\n",
+        "\n",
+        "* Replace categorical data with ordinal numbers."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "1. Declare a variable with the categorical variable names"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "categorical_variables = list(train_set.select_dtypes(['object','category']).columns)\n",
+        "categorical_variables"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "2. Create a dataframe from a subset of the Train set using the variable above."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_categorical = train_set[categorical_variables].copy()\n",
+        "df_categorical.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "3. Apply the transformation to the variables and assess the distribution in order to select a suitable method for each variable"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_categorical_engineered = FeatureEngineeringAnalysis(df=df_categorical, analysis_type='ordinal_encoder')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Analysis of plots\n",
+        "* The transformation from categorical to numerical is effective"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Numerical Transformation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "1. Declare a variable with the numerical variable names"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "numerical_variables = list(train_set.select_dtypes(['int64','float64']).columns)\n",
+        "numerical_variables"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "2. Create a dataframe from a subset of the Train set using the variable above"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_numerical = train_set[numerical_variables].copy()\n",
+        "df_numerical.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "3. We can apply the transformation to the variables and assess their distribution in order to select a suitable method for each variable."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_numerical_engineered = FeatureEngineeringAnalysis(df=df_numerical, analysis_type='numerical')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Analysis of plots"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Variables Analyzed: `1stFlrSF`, `GrLivArea`, `LotArea`, `SalePrice`\n",
+        "* Applied transformation:\n",
+        "  * `Log e`, `Log 10`, `Reciprocal`, `Power`, `Box Cox`, `Yeo Johnson` \n",
+        "* With exception of `Reciprocal` and `Power`, the applied transformations show an improvement in terms of distribution shape and QQ plot. The transformed options show characteristics of normal distribution. \n",
+        "* Conclusion:\n",
+        "  * `Log e`, `Log 10`, `Box Cox` and `Yeo Johnson` may be considered for numerical transformation of `1stFlrSF`, `GrLivArea`, `LotArea` and `SalePrice`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Variables Analyzed: `2ndFlrSF`, `BedroomAbvGr`, `BsmtFinSF1`, `BsmtUnfSF`, `GarageArea`, `GarageYrBlt`, `TotalBsmtSF`\n",
+        "* Applied transformation:\n",
+        "  * `Power`, `Yeo Johnson`\n",
+        "* Only 2 transformations applied were `Power` and `Yeo Johnson`.\n",
+        "* Neither of the plots show an improvement in terms of distribution shape and QQ plot, since the transformed options\n",
+        "don't show characteristics of normal distribution.\n",
+        "* Conclusion:\n",
+        "  * These variables will not be considered for numerical transformation."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Variables Analyzed: `MasVnrArea`\n",
+        "* Applied transformation:\n",
+        "  * `Power`, `Yeo Johnson`\n",
+        "* Only 2 transformations were applied, `Power` and `Yeo Johnson`.\n",
+        "* The plots for `Power` show an improvement in terms of distribution shape and QQ plot, and show characteristics of normal distribution.\n",
+        "* However, `Yeo Johnson` does not show any improvement.\n",
+        "* Conclusion:\n",
+        "  * `Power` may be considered for numerical transformation of `MasVnrArea`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Variables Analyzed: `LotFrontage`, `OverallCond`, `OverallQual`\n",
+        "* Applied transformation:\n",
+        "  * `Log e`, `Log 10`, `Reciprocal`, `Power`, `Box Cox`, `Yeo Johnson`\n",
+        "* `Power`, `Box Cox` and `Yeo Johnson` transformations show similar results on the distribution shape and QQ plot to that of the plot before transformation.\n",
+        "* `Log e`, `Log 10` and `Reciprocal` do not show improvement. \n",
+        "* Conclusion:\n",
+        "  * This variable will not be considered for numerical transformation."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Variable Analyzed: `OpenPorchSF`\n",
+        "* Applied transformation:\n",
+        "  * `Power`, `Yeo Johnson`\n",
+        "* Only 2 transformations were applied, `Power` and `Yeo Johnson`.\n",
+        "* The plots for `Yeo Johnson` show improvement in terms of distribution shape and QQ plot, and show characteristics of normal distribution.\n",
+        "* However, `Power` does not show any improvement.\n",
+        "* Conclusion:\n",
+        "  * `Yeo Johnson` may be considered for numerical transformation of `OpenPorchSF`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Variable Analyzed: `YearBuilt`, `YearRemodAdd`\n",
+        "* Applied transformation:\n",
+        "  * `Log e`, `Log 10`, `Reciprocal`, `Power`, `Box Cox`, `Yeo Johnson`\n",
+        "* Transformations on these variables offered no improvement.\n",
+        "* Conclusion:\n",
+        "  * These variables will not be considered for numerical transformation."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ltNetd085qHf"
       },
